# Gamus

./: .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  rustfmt.toml  vite.config.ts
backend/: Cargo.toml  tauri.conf.json
backend/src/: config.rs  lib.rs  main.rs
backend/src/infrastructure/: reporter.rs
backend/src/infrastructure/system/: gpu_tweak.rs  mod.rs
crates/gamus-config/: Cargo.toml
crates/gamus-config/src/: backend.rs  lib.rs  model.rs  paths.rs
crates/gamus-core/: Cargo.toml
crates/gamus-core/src/: errors.rs  lib.rs
crates/gamus-core/src/discography/: artist.rs  genre_styles.rs  mod.rs  release.rs  release_track.rs  release_type.rs  song.rs  song_stats.rs
crates/gamus-core/src/domain/: artist.rs  artist_role.rs  ids.rs  mod.rs  rating.rs  release.rs  release_track.rs  song.rs  song_stats.rs
crates/gamus-core/src/ports/: library.rs  library_repository.rs  metadata.rs  mod.rs  progress.rs  scanner.rs
crates/gamus-core/src/services/: library_service.rs  mod.rs
crates/gamus-fs/: Cargo.toml
crates/gamus-fs/src/: async_walker.rs  config.rs  io.rs  lib.rs  scanner.rs
crates/gamus-metadata/: Cargo.toml
crates/gamus-metadata/src/: config.rs  ffmpeg_extractor.rs  lib.rs  mapping.rs  spectral_analyzer.rs  tag_keys.rs
crates/gamus-scanner/: Cargo.toml
crates/gamus-scanner/src/: adapter.rs  config.rs  device.rs  fs_scanner.rs  lib.rs
crates/gamus-storage/: Cargo.toml  gamus.db
crates/gamus-storage/migrations/2025-12-07-050923-0000_init_gamus_core/: down.sql  up.sql
crates/gamus-storage/src/: config.rs  lib.rs  models.rs  schema.rs
desing/: database.dbml
isolation/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
isolation/src/: global.d.ts  main.ts
scripts/: print.py
src/: App.vue  main.ts  styles.css
