[workspace]
members = ["./crates/*", "./backend"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "BUSL-1.1"

[profile.dev]
incremental = true # Compile your binary in smaller steps.
opt-level = 0

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
