[package]
name = "gamus-config"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
directories = "6.0.0"
gamus-fs = { version = "0.1.0", path = "../gamus-fs" }
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
toml = "0.9.8"

[dev-dependencies]
tempfile = "3.23.0"
