[package]
name = "gamus-scanner"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
gamus-config = { version = "0.1.0", path = "../gamus-config" }
gamus-core = { version = "0.1.0", path = "../gamus-core" }
gamus-fs = { version = "0.1.0", path = "../gamus-fs" }
gamus-metadata = { version = "0.1.0", path = "../gamus-metadata" }
serde = { version = "1.0.228", features = ["derive"] }
