[package]
name = "gamus-scanner"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
gamus-config = { version = "0.1.0", path = "../gamus-config" }
gamus-core = { version = "0.1.0", path = "../gamus-core" }
gamus-fs = { version = "0.1.0", path = "../gamus-fs" }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = "1.48.0"
