[package]
name = "gamus-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
diesel = { version = "2.3.4", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "r2d2",
] }
diesel_migrations = { version = "2.3.1", features = ["sqlite"] }
gamus-config = { version = "0.1.0", path = "../gamus-config" }
gamus-core = { version = "0.1.0", path = "../gamus-core" }
serde = { version = "1.0.228", features = ["derive"] }
uuid = "1.19.0"

[dev-dependencies]
dotenvy = "0.15.7"
